<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/tvPreferences"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvPreferences"
            app:layout_constraintStart_toStartOf="@+id/tvScore"
            app:layout_constraintTop_toBottomOf="@+id/etScore"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/tvScore"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbPreferences"
            app:layout_constraintStart_toStartOf="@+id/tvPreferences"
            app:layout_constraintTop_toBottomOf="@+id/tvPreferences"
            android:layout_marginTop="10dp">
        <RadioButton
                android:text="@string/rbGetDefaultSharedPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbGetDefaultSharedPreferences"/>
        <RadioButton
                android:text="@string/rbGetPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbGetPreferences"/>
        <RadioButton
                android:text="@string/rbGetSharedPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbGetSharedPreferences"/>
    </RadioGroup>
    <TextView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/tvPlayerName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvPlayerName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/tvBackground"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvBackground"
            app:layout_constraintTop_toTopOf="@+id/tvPlayerName"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/spinnerBackground"
            app:layout_constraintTop_toBottomOf="@+id/tvBackground"
            app:layout_constraintStart_toStartOf="@+id/tvBackground"
            app:layout_constraintEnd_toEndOf="@+id/tvBackground"
            android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etPlayerName"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerName"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerName"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerName"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/tvLevel"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvLevel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/etPlayerName"
            app:layout_constraintEnd_toEndOf="@+id/etPlayerName"
            android:layout_marginTop="20dp"/>
    <Spinner
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/spinnerLevel"
            app:layout_constraintTop_toBottomOf="@+id/tvLevel"
            app:layout_constraintStart_toStartOf="@+id/tvLevel"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/tvScore"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLevel"
            app:layout_constraintStart_toStartOf="@+id/spinnerLevel"
            app:layout_constraintEnd_toEndOf="@+id/spinnerLevel"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etScore"
            app:layout_constraintTop_toBottomOf="@+id/tvScore"
            app:layout_constraintEnd_toEndOf="@+id/tvScore"
            app:layout_constraintStart_toStartOf="@+id/tvScore"
            android:layout_marginTop="10dp"/>
    <Button
            android:text="@string/btPreferencesFile"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:id="@+id/btShowPreferences"
            app:layout_constraintEnd_toEndOf="@+id/tvDifficulty"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    <CheckBox
            android:text="@string/cbSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbSound"
            app:layout_constraintEnd_toEndOf="@+id/btShowPreferences"
            app:layout_constraintBottom_toTopOf="@+id/btShowPreferences"
            android:layout_marginBottom="10dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbDifficulty"
            app:layout_constraintTop_toBottomOf="@+id/tvDifficulty"
            app:layout_constraintStart_toStartOf="@+id/tvDifficulty"
            android:layout_marginTop="10dp">
        <RadioButton
                android:text="@string/rbEasy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbEasy"/>
        <RadioButton
                android:text="@string/rbNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbNormal"/>
        <RadioButton
                android:text="@string/rbHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbHard"/>
        <RadioButton
                android:text="@string/rbVeryHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVeryHard"/>
        <RadioButton
                android:text="@string/rbExpert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbExpert"/>
    </RadioGroup>
    <TextView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/tvDifficulty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvDifficulty"
            app:layout_constraintTop_toBottomOf="@+id/spinnerBackground"
            app:layout_constraintStart_toStartOf="@+id/spinnerBackground"
            app:layout_constraintEnd_toEndOf="@+id/spinnerBackground"
            android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>